--- a/Folder_Generator.ipynb
+++ b/Folder_Generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,45 +16,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import filedialog\n",
+    "\n",
+    "class Solution:\n",
+    "    def __init__ (self):\n",
+    "        self.file = None\n",
+    "        self.evaluation = None\n",
+    "\n",
+    "    def load_data(self):\n",
+    "        if self.file is not None and self.evaluation is not None:  \n",
+    "            student_registration = pd.read_excel(self.file)\n",
+    "            student_registration = student_registration.rename(columns={\n",
+    "            'Registration Date': 'Registration_Date',\n",
+    "            'First Name': 'First_Name',\n",
+    "            'Last Name': 'Last_Name'})\n",
+    "                \n",
+    "            student_registration.Registration_Date = student_registration.Registration_Date.dt.strftime('%m/%d/%Y')\n",
+    "     \n",
+    "            with open(self.evaluation, 'r') as f:\n",
+    "                        evaluation_form = pd.read_excel(f)\n",
+    "            \n",
+    "            return student_registration, evaluation_form\n",
+    "        \n",
+    "     \n",
+    "        else: \n",
+    "            print(\"Please select files\")\n",
+    "            return None, None\n",
+    "        \n",
+    "    \n",
+    "    def select_registration_file(self):\n",
+    "        self.file = filedialog.askopenfilename(initialdir = \".\", title = \"Select Registration File\",\n",
+    "                                               filetypes = ((\"Excel files\", \"*.xlsx\"), (\"all files\", \"*.*\")))\n",
+    "\n",
+    "    def select_evaluation_file(self):\n",
+    "        self.evaluation = filedialog.askopenfilename(initialdir = \".\", title = \"Select Evaluation File\",\n",
+    "                                                     filetypes = ((\"Excel files\", \"*.xlsx\"), (\"all files\", \"*.*\")))\n",
+    "\n",
+    "def main():\n",
+    "    root = tk.Tk()\n",
+    "    root.title(\"File Selection\")\n",
+    "    \n",
+    "    app = Solution()\n",
+    "\n",
+    "    # Registration file button\n",
+    "    reg_file_button = tk.Button(root, text=\"Select Registration File\", command=app.select_registration_file)\n",
+    "    reg_file_button.pack(pady=10)\n",
+    "\n",
+    "    # Evaluation file button\n",
+    "    eval_file_button = tk.Button(root, text=\"Select Evaluation File\", command=app.select_evaluation_file)\n",
+    "    eval_file_button.pack(pady=10)\n",
+    "\n",
+    "    # Load files button\n",
+    "    load_files_button = tk.Button(root, text=\"Load Files\", command=app.load_files)\n",
+    "    load_files_button.pack(pady=10)\n",
+    "\n",
+    "    root.mainloop()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
     "\n",
-    "        def __init__ (self,file, evaluation):\n",
+    "        def __init__ (self, file, evaluation):\n",
     "                self.file = file\n",
     "                self.evaluation = evaluation\n",
-    "\n",
-    "        def load_registration_file(self):\n",
+    "        \n",
+    "        def load_data(self):\n",
     "                student_registration = pd.read_excel(self.file)\n",
-    "                student_registration = student_registration.rename(columns = {'Registration Date':'Registration_Date',\n",
-    "                'First Name':'First_Name','Last Name':'Last_Name'})\n",
-    "                student_registration.Registration_Date = student_registration.Registration_Date.dt.strftime('%m/%d/%Y')\n",
+    "                student_registration = student_registration.rename(columns={\n",
+    "                'Registration Date': 'Registration_Date',\n",
+    "                'First Name': 'First_Name',\n",
+    "                'Last Name': 'Last_Name'})\n",
     "                \n",
-    "                return student_registration\n",
+    "                student_registration.Registration_Date = student_registration.Registration_Date.dt.strftime('%m/%d/%Y')\n",
+    "     \n",
+    "                with open(self.evaluation, 'r') as f:\n",
+    "                        evaluation_form = pd.read_excel(f)\n",
+    "     \n",
+    "                return student_registration, evaluation_form\n",
     "\n",
-    "        def load_evaluation_file(self):\n",
-    "                evaluation_form = pd.read_excel(self.evaluation)\n",
-    "                print(evaluation_form)\n",
+    "        # def load_registration_file(self):\n",
+    "        #         student_registration = pd.read_excel(self.file)\n",
+    "        #         student_registration = student_registration.rename(columns = {'Registration Date':'Registration_Date',\n",
+    "        #         'First Name':'First_Name','Last Name':'Last_Name'})\n",
+    "        #         student_registration.Registration_Date = student_registration.Registration_Date.dt.strftime('%m/%d/%Y')\n",
+    "                \n",
+    "        #         return student_registration\n",
+    "        \n",
+    "        # def load_evaluation_file(self):\n",
+    "        #         with open(self.evaluation, 'r') as f:\n",
+    "        #                 evaluation_form = pd.read_excel(f)\n",
+    "\n",
+    "        #         return evaluation_form \n",
+    "\n",
     "                \n",
     "        def get_full_name(row):\n",
     "                fullname = row.First_Name + \"_\" + row.Last_Name\n",
     "                return fullname\n",
     "\n",
     "\n",
-    "BootCamp_1 = Solution('Registration List_HTU_7-5-22.xlsx', 'Evaluation_Rubric.xlsx' )\n",
+    "BootCamp_1 = Solution('Bootcamp Applications UTEP 5-1-23.xlsx', 'Evaluation Rubric - BOOT Camp Application-V1.xlsx' )\n",
     "\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'Bootcamp Applications UTEP 5-1-23.xlsx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb Cell 4\u001b[0m in \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df \u001b[39m=\u001b[39m BootCamp_1\u001b[39m.\u001b[39;49mload_data()[\u001b[39m0\u001b[39m]\n",
+      "\u001b[1;32m/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb Cell 4\u001b[0m in \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb#W3sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload_data\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb#W3sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         student_registration \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_excel(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfile)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb#W3sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m         student_registration \u001b[39m=\u001b[39m student_registration\u001b[39m.\u001b[39mrename(columns\u001b[39m=\u001b[39m{\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb#W3sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mRegistration Date\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mRegistration_Date\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb#W3sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mFirst Name\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mFirst_Name\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb#W3sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mLast Name\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mLast_Name\u001b[39m\u001b[39m'\u001b[39m})\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb#W3sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m         student_registration\u001b[39m.\u001b[39mRegistration_Date \u001b[39m=\u001b[39m student_registration\u001b[39m.\u001b[39mRegistration_Date\u001b[39m.\u001b[39mdt\u001b[39m.\u001b[39mstrftime(\u001b[39m'\u001b[39m\u001b[39m%\u001b[39m\u001b[39mm/\u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m%\u001b[39m\u001b[39mY\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/util/_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    305\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[1;32m    306\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m    307\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39marguments),\n\u001b[1;32m    308\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[1;32m    309\u001b[0m         stacklevel\u001b[39m=\u001b[39mstacklevel,\n\u001b[1;32m    310\u001b[0m     )\n\u001b[0;32m--> 311\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/io/excel/_base.py:457\u001b[0m, in \u001b[0;36mread_excel\u001b[0;34m(io, sheet_name, header, names, index_col, usecols, squeeze, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, thousands, decimal, comment, skipfooter, convert_float, mangle_dupe_cols, storage_options)\u001b[0m\n\u001b[1;32m    455\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(io, ExcelFile):\n\u001b[1;32m    456\u001b[0m     should_close \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m--> 457\u001b[0m     io \u001b[39m=\u001b[39m ExcelFile(io, storage_options\u001b[39m=\u001b[39;49mstorage_options, engine\u001b[39m=\u001b[39;49mengine)\n\u001b[1;32m    458\u001b[0m \u001b[39melif\u001b[39;00m engine \u001b[39mand\u001b[39;00m engine \u001b[39m!=\u001b[39m io\u001b[39m.\u001b[39mengine:\n\u001b[1;32m    459\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    460\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mEngine should not be specified when passing \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    461\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39man ExcelFile - ExcelFile already has the engine set\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    462\u001b[0m     )\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/io/excel/_base.py:1376\u001b[0m, in \u001b[0;36mExcelFile.__init__\u001b[0;34m(self, path_or_buffer, engine, storage_options)\u001b[0m\n\u001b[1;32m   1374\u001b[0m     ext \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mxls\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1375\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1376\u001b[0m     ext \u001b[39m=\u001b[39m inspect_excel_format(\n\u001b[1;32m   1377\u001b[0m         content_or_path\u001b[39m=\u001b[39;49mpath_or_buffer, storage_options\u001b[39m=\u001b[39;49mstorage_options\n\u001b[1;32m   1378\u001b[0m     )\n\u001b[1;32m   1379\u001b[0m     \u001b[39mif\u001b[39;00m ext \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   1380\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   1381\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mExcel file format cannot be determined, you must specify \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1382\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39man engine manually.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1383\u001b[0m         )\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/io/excel/_base.py:1250\u001b[0m, in \u001b[0;36minspect_excel_format\u001b[0;34m(content_or_path, storage_options)\u001b[0m\n\u001b[1;32m   1247\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(content_or_path, \u001b[39mbytes\u001b[39m):\n\u001b[1;32m   1248\u001b[0m     content_or_path \u001b[39m=\u001b[39m BytesIO(content_or_path)\n\u001b[0;32m-> 1250\u001b[0m \u001b[39mwith\u001b[39;00m get_handle(\n\u001b[1;32m   1251\u001b[0m     content_or_path, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m, storage_options\u001b[39m=\u001b[39;49mstorage_options, is_text\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m\n\u001b[1;32m   1252\u001b[0m ) \u001b[39mas\u001b[39;00m handle:\n\u001b[1;32m   1253\u001b[0m     stream \u001b[39m=\u001b[39m handle\u001b[39m.\u001b[39mhandle\n\u001b[1;32m   1254\u001b[0m     stream\u001b[39m.\u001b[39mseek(\u001b[39m0\u001b[39m)\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/io/common.py:795\u001b[0m, in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    786\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\n\u001b[1;32m    787\u001b[0m             handle,\n\u001b[1;32m    788\u001b[0m             ioargs\u001b[39m.\u001b[39mmode,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    791\u001b[0m             newline\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    792\u001b[0m         )\n\u001b[1;32m    793\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    794\u001b[0m         \u001b[39m# Binary mode\u001b[39;00m\n\u001b[0;32m--> 795\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(handle, ioargs\u001b[39m.\u001b[39;49mmode)\n\u001b[1;32m    796\u001b[0m     handles\u001b[39m.\u001b[39mappend(handle)\n\u001b[1;32m    798\u001b[0m \u001b[39m# Convert BytesIO or file objects passed with an encoding\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Bootcamp Applications UTEP 5-1-23.xlsx'"
+     ]
+    }
+   ],
    "source": [
-    "df = BootCamp_1.load_registration_file()"
+    "df = BootCamp_1.load_data()[0]"
    ]
   },
   {
@@ -66,9 +168,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb Cell 6\u001b[0m in \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m    fullname \u001b[39m=\u001b[39m row\u001b[39m.\u001b[39mFirst_Name \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m row\u001b[39m.\u001b[39mLast_Name\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m    \u001b[39mreturn\u001b[39;00m fullname\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/nicholashoang/Documents/GitHub/GETPHITAutomations/Folder_Generator.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39mfull_name\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mapply(get_first_last_name, axis \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def get_first_last_name(row):\n",
     "   fullname = row.First_Name + \" \" + row.Last_Name\n",
@@ -403,6 +517,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_existing_folders():\n",
+    "    num_of_docs = [directory for directory in os.listdir('.') if os.path.isdir(os.path.join(\".\", directory))]\n",
+    "    print(f'There are a total of {len(num_of_docs)} student folders in this directory.')\n",
+    "    return num_of_docs\n",
+    "\n",
+    "directory_contents = get_existing_folders()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -415,19 +543,19 @@
     }
    ],
    "source": [
-    "def get_existing_folders():\n",
+    "# def get_existing_folders():\n",
     "    \n",
-    "    num_of_docs = []\n",
+    "#     num_of_docs = []\n",
     "    \n",
-    "    for directory in os.listdir('.'):\n",
-    "        if os.path.isdir(os.path.join(\".\", directory)):\n",
-    "            num_of_docs.append(directory)\n",
+    "#     for directory in os.listdir('.'):\n",
+    "#         if os.path.isdir(os.path.join(\".\", directory)):\n",
+    "#             num_of_docs.append(directory)\n",
     "\n",
-    "    print(f'There are a total of {len(num_of_docs)} student folders in this directory.')\n",
+    "#     print(f'There are a total of {len(num_of_docs)} student folders in this directory.')\n",
     "\n",
-    "    return num_of_docs\n",
+    "#     return num_of_docs\n",
     "    \n",
-    "directory_contents = get_existing_folders()\n"
+    "# directory_contents = get_existing_folders()\n"
    ]
   },
   {
@@ -535,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
